FAQ is glitched on mobile and the menu seems buggy on mobile, not sure

--- a/planc/css/style.css
+++ b/planc/css/style.css
@@ -554,6 +554,7 @@ body{
 }
 
 .-mob-view{
+	width: 100vw;
 	display: none;
 	overflow-x: hidden;
 	padding-top: var(--nav-height);
